--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Delani Studios</title>
 
+    <!-- font awesome link -->
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -57,14 +63,49 @@
                             <h1>WHAT WE DO</h1>
                         </div>
                     </div>
-                    <div class="col-md-4"></div>
+                    <div class="col-md-4" id="icons">
+                        <img src="images/desgn1.png">
+                        <img src="images/desgn2.png">
+                        <img src="images/desgn3.png">
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
+                    <h1>Portofolio</h1>
+                    <div class="col-md-4" id="images1">
+                        <img src="images/work1.jpg">
+                        <img src="images/work2.jpg">
+                        <img src="images/work3.jpg">
+                        <img src="images/work4.jpg">
+                    </div>
+                    <div class="col-md-4" id="images2">
+                        <img src="images/work5.jpg">
+                        <img src="images/work6.jpg">
+                        <img src="images/work7.jpg">
+                        <img src="images/work8.jpg">
+                    </div>
+                </div>
+                <div class="contacts" style="background-image: url('images/c.jpg'); background-size: cover;height: 400px;">
+                    <h1>Contact us</h1>
+                    <label class="l1">Amwata Albert</label>
+                    <label class="l2">albertotieno41@gmail.com</label>
+                    <label class="l3">Your message here</label>
                 </div>
             </div>
       </div>
+      <footer class="bottom">
+          <div class="bottom1">
+              <i class="fa fa-twitter" style="color: ;"></i>
+              <i class="fa fa-facebook"></i>
+              <i class="fa fa-whatsapp"></i>
+              <i class="fa fa-telegram"></i>
+              <i class="fa fa-snapchat"></i>
+              <i class="fa fa-skype"></i>
+              <i class="fa fa-pinterest"></i>
+              <p>&nbsp;</p>
+              <p>DELANI STUDIO</p>
+              <P>2019</P>
+          </div>
+      </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
