--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
       </div>
       <footer class="bottom">
           <div class="bottom1">
-              <i class="fa fa-twitter" style="color: ;"></i>
-              <i class="fa fa-facebook"></i>
-              <i class="fa fa-whatsapp"></i>
-              <i class="fa fa-telegram"></i>
-              <i class="fa fa-snapchat"></i>
-              <i class="fa fa-skype"></i>
-              <i class="fa fa-pinterest"></i>
+              <i class="fa fa-twitter" style="color:blue;"></i>
+              <i class="fa fa-facebook" style="color: blueviolet;"></i>
+              <i class="fa fa-whatsapp" style="color: brown;"></i>
+              <i class="fa fa-telegram" style="color: cadetblue;"></i>
+              <i class="fa fa-snapchat" style="color: chocolate;"></i>
+              <i class="fa fa-skype" style="color: chocolate;"></i>
+              <i class="fa fa-pinterest" style="color: cornsilk;"></i>
               <p>&nbsp;</p>
               <p>DELANI STUDIO</p>
               <P>2019</P>
