--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                 </div>
                 <div class="row1">
-                    <h1>Portofolio</h1>
+                    <h1 style="width: 100%; float: left;">Portofolio</h1>
                     <div class="logos2">
                         <div class="C">
                             <img src="images/work1.jpg">
@@ -159,9 +159,14 @@
                 </div>    
                 <div class="contacts" style="background-image: url('images/c.jpg'); background-size: cover;height: 400px;">
                     <h1>Contact us</h1>
-                    <label class="l1">Amwata Albert</label>
-                    <label class="l2">albertotieno41@gmail.com</label>
-                    <label class="l3">Your message here</label>
+                    <form>
+                        <input class="l1" type="text" placeholder="enter your name" id="ll1">
+                        <input class="l2" type="text" placeholder="enter your email" id="ll2">
+                        <input class="l3" type="text" placeholder="enter your message" id="ll3">
+
+                        <input type="submit" value="submit" onclick="cllick()">
+                    </form>
+                   
                 </div>
             </div>
       </div>
