--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                     <div class="A1">
                         <img src="images/desgn1.png">
                         <h3>DESIGN</h3>
-                        <div class="B1">
-                            <!-- <strong><h1>DESIGN</h1></strong> -->
+                        <div class="B
                             <p>Our design practice offers a full range of services
                             including brand strategy,interaction and visual design
                             and user experince test
@@ -78,7 +77,6 @@
                         <img src="images/desgn2.png">
                         <h3>DEVELOPEMENT</h3>
                         <div class="B2">
-                            <!-- <h1>DEVELOPEMENT</h1> -->
                             <p>All engineers are all fluemt in the latest enterprise
                             mobile and web developement technologies
                             they collaborate with your team to write and improve
