--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="A1">
                         <img src="images/desgn1.png">
                         <h3>DESIGN</h3>
-                        <div class="B
+                        <div class="B1">
                             <p>Our design practice offers a full range of services
                             including brand strategy,interaction and visual design
                             and user experince test
