--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="C">
                             <img src="images/work1.jpg">
                             <div class="D">
-                                <h2>name of project</h2>
+                                <h2>Delani Studio</h2>
                             </div>
                         </div>
                         <div class="C1">
