--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="C2">
                             <img src="images/work3.jpg">
                             <div class="D2">
-                                <h2>name of project</h2>
+                                <h2>Delani Studio</h2>
                             </div>
                         </div>
                         <div class="C3">
