--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="C3">
                             <img src="images/work4.jpg">
                             <div class="D3">
-                                <h2>name of project</h2>
+                                <h2>Delani Studio</h2>
                             </div>
                         </div>
                     </div>
