--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <div class="C4">
                             <img src="images/work5.jpg">
                             <div class="D4">
-                                <h2>name of project</h2>
+                                <h2>Delani Studio</h2>
                             </div>
                         </div>
                         <div class="C5">
