--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <div class="C5">
                             <img src="images/work6.jpg">
                             <div class="D5">
-                                <h2>name of project</h2>
+                                <h2>Delani Studio</h2>
                             </div>
                         </div>
                         <div class="C6">
