--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <div class="C6">
                             <img src="images/work7.jpg">
                             <div class="D6">
-                                <h2>name of project</h2>
+                                <h2>Delani Studio</h2>
                             </div>
                         </div>
                         <div class="C7">
