--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="C7">
                             <img src="images/work8.jpg">
                             <div class="D7">
-                                <h2>name of project</h2>
+                                <h2>Delani Studio</h2>
                             </div>
                         </div>
                     </div>
