styled index.html

--- a/index.html
+++ b/index.html
@@ -19,31 +19,32 @@
   <body>
       <div class="container">
           <div class="section1">
-              <div class="row">
-                  <div class="first-text jumbotron">
-                      <p><BR><BR><BR></p>
+              <P><BR></BR></P>
+                  <div class="Z">
                       <img src="css/assets/logo.png">
-                      <p><bold><BR><BR><BR>WELCOME<BR> TO DELANI STUDIOS</bold></p>
-                      <h4>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT<br><br><br></h4>
-                      <img src="css/assets/mouse_click.png">
+                      <p>WELCOME</p>
+                     <p>TO DELANI STUDIOS</p>
+                      <h4>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h4>
+                      <img class="mouse" src="css/assets/mouse_click.png">
                   </div>
-              </div>
+            
           </div>
-        <div class="section2">
-            <div class="row">
-                <div class="second-text">
-                    <p>ABOUT US</p><BR>
-                    <p>When you work with us, you are part of a team of committed collaborators.<br>All aspects of our software development process are integrated, iterative and agile.</p><p>Our approach unifies design, development and<br> project management to create exceptional products. <br>We start each project by understanding our business goals, <br>the user's needs and the products requirements.<br>Then we help translate them into effective and elegant solutions</p>
-                </div>
-            </div>
-        </div>
-            <div class="section3">
+            <div class="section2">
                 <div class="row">
-                    <div class="third-text">
-                        <h1 style="float:center; margin-top:2%;">services</h1>
-                    <p>Before We sign a contract or write a line of code, our team will spend the necessary <br> time needed to understand our product vision.<br>The outcome of this scoping session is a proposal or high-level statement of work.<br>Based on your requirements, we can provide a complete offering or just the pieces<br>you need.  </p>
+                    <div class="second-text">
+                        <p>ABOUT US</p><BR>
+                        <p>When you work with us, you are part of a team of committed collaborators.<br>All aspects of our software development process are integrated, iterative and agile.</p><p>Our approach unifies design, development and<br> project management to create exceptional products. <br>We start each project by understanding our business goals, <br>the user's needs and the products requirements.<br>Then we help translate them into effective and elegant solutions</p>
                     </div>
                 </div>
+            </div>
+            <div class="section3">
+                <p><br></p>
+                <p><br></p>
+                    <div class="third-text">
+                        <h1 style="float:center; margin-top:3%;">services</h1>
+                    <p>Before We sign a contract or write a line of code, our team will spend the necessary <br> time needed to understand our product vision.<br>The outcome of this scoping session is a proposal or high-level statement of work.<br>Based on your requirements, we can provide a complete offering or just the pieces<br>you need.  </p>
+                    </div>
+                
             </div>
             <div class="section4">
                 <div class="fourth-text">
